; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/inetcomm/extr_protocol.c_heap_strdupW.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/inetcomm/extr_protocol.c_heap_strdupW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @heap_strdupW to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @heap_strdupW(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32* null, i32** %3, align 8
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %24

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @lstrlenW(i32 %8)
  %10 = add nsw i32 %9, 1
  %11 = sext i32 %10 to i64
  %12 = mul i64 %11, 4
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i32* @heap_alloc(i32 %14)
  store i32* %15, i32** %3, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %23

18:                                               ; preds = %7
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* %2, align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @memcpy(i32* %19, i32 %20, i32 %21)
  br label %23

23:                                               ; preds = %18, %7
  br label %24

24:                                               ; preds = %23, %1
  %25 = load i32*, i32** %3, align 8
  ret i32* %25
}

declare dso_local i32 @lstrlenW(i32) #1

declare dso_local i32* @heap_alloc(i32) #1

declare dso_local i32 @memcpy(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
